crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@208.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT make_timestamptz(1973, 07, 15, 08, 15, 55.33, '+2');"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..57
    FuncCall@7..57
      Ident@7..23 "make_timestamptz"
      Ascii40@23..24 "("
      AConst@24..28
        Iconst@24..28 "1973"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..32
        Iconst@30..32 "07"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..36
        Iconst@34..36 "15"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..40
        Iconst@38..40 "08"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..44
        Iconst@42..44 "15"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..51
        Fconst@46..51 "55.33"
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      AConst@53..57
        Sconst@53..57 "'+2'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

