crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@219.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT make_timestamptz(1910, 12, 24, 0, 0, 0, 'Nehwon/Lankhmar');"
---
SelectStmt@0..66
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..64
    FuncCall@7..64
      Ident@7..23 "make_timestamptz"
      Ascii40@23..24 "("
      AConst@24..28
        Iconst@24..28 "1910"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..32
        Iconst@30..32 "12"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..36
        Iconst@34..36 "24"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..39
        Iconst@38..39 "0"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..42
        Iconst@41..42 "0"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      AConst@44..45
        Iconst@44..45 "0"
      Ascii44@45..46 ","
      Whitespace@46..47 " "
      AConst@47..64
        Sconst@47..64 "'Nehwon/Lankhmar'"
  Ascii41@64..65 ")"
  Ascii59@65..66 ";"

