crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@221.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT make_timestamptz(2008, 12, 10, 10, 10, 10, 'EDT');"
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..55
    FuncCall@7..55
      Ident@7..23 "make_timestamptz"
      Ascii40@23..24 "("
      AConst@24..28
        Iconst@24..28 "2008"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..32
        Iconst@30..32 "12"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..36
        Iconst@34..36 "10"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..40
        Iconst@38..40 "10"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..44
        Iconst@42..44 "10"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..48
        Iconst@46..48 "10"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..55
        Sconst@50..55 "'EDT'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

